mi primera confirmacion de actualizacion

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
       </nav>
     </header>
 
-    <main id="seccion-principal">   
+    <main id="seccion-principal">  
+      <div class="greeting">
+        <p>MIRA ESTE CAMBIO</p>
+      </div> 
       <section class="seccion-1">
           <div class="acerca-de">
               <div class="card">           
