--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <div class="card">           
                   <h2>ACERCA DE MI</h2>
                   <p class="parrafo1">Bienvenidos a mi página</p><br>                
-                  <p class="parrafo2"> Mi nombre es <em>JOSE HERNANDO CASTRO</em>, profesional en <strong>ingeniería de sistemas</strong>, presto mis servicios de asesoría y consultoría con mucha experiencia en administración de proyectos de tecnologia. Naci en <span>TUNJA</span>, la tierra mas hermosa de Colombia. Me apasiona mucho programar, viajar y pasar con mi familia. 
+                  <p class="parrafo2"> Soy <em>JOSE HERNANDO CASTRO</em>, profesional en <strong>ingeniería de sistemas</strong>, presto mis servicios de asesoría y consultoría con mucha experiencia en administración de proyectos de tecnologia. Naci en <span>TUNJA</span>, la tierra mas hermosa de Colombia. Me apasiona mucho programar, viajar y pasar con mi familia. 
                   </p><br>  
                   <a href="img/Mi hoja de vida.pdf">Descarga mi hoja de vida</a><br>
               </div>
@@ -75,7 +75,7 @@
                   </div>  
                   <h2>Medio ambiente</h2>                      
                   
-                  <span class="text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti placeat voluptatum maiores, quod rerum recusandae, perspiciatis repudiandae vel reiciendis rem at optio excepturi suscipit itaque fuga mollitia maxime perferendis quae? 
+                  <span class="text"> En esta sección encontraras información relacionada con proyectos que se vienen desarrollando para la conservación del medio ambiente y sobre como salvar el planeta, dado el alto indice de contaminación que estamos generando la sociedad en general 
                   </span>
                       <a href="https://www.youtube.com/watch?v=GiERmzwrnR0">Mas información...</a>   
               </div>
@@ -86,7 +86,7 @@
                       <img src="../mi_primera_web/img/proyecto2.jpg" alt="">
                   </div>
                   <h2>Asesorías y Consultorías</h2>
-                  <span class="text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti placeat voluptatum maiores, quod rerum recusandae, perspiciatis repudiandae vel reiciendis rem at optio excepturi suscipit itaque fuga mollitia maxime perferendis quae? 
+                  <span class="text"> Aca te puedes dar una idea sobre el alcance de las consultorias y asesorías que presto como ingeniero de sistemas en la parte de admininstración de proyectos de tencología, partiendo desde el levantamiento de información, analisis y estructuración del proyecto, evaluación de alternativas e implementación de la solución, entre otros entregables.
                   </span>
                       <a href="https://www.youtube.com/watch?v=GiERmzwrnR0">Mas información...</a>  
               </div>
@@ -97,7 +97,7 @@
                       <img src="../mi_primera_web/img/proyecto3.jpg" alt="">
                   </div>
                   <h2>Proyectos hechos realidad</h2>
-                  <span class="text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti placeat voluptatum maiores, quod rerum recusandae, perspiciatis repudiandae vel reiciendis rem at optio excepturi suscipit itaque fuga mollitia maxime perferendis quae? 
+                  <span class="text"> Comparto con ustedes algunos proyectos importantes que he desarrollado y que hoy en día estan funcionando en empresas importantes, contribuyendo a la satisfacción de los clientes, logrando mejor rentabilidad para los accionistas y mejorando la calidad de vida para los colaboradores de las empresas, entre otros benefcios.
                   </span>
                       <a href="https://www.youtube.com/watch?v=GiERmzwrnR0">Mas información...</a> 
               </div>
