--- a/index.html
+++ b/index.html
@@ -56,11 +56,10 @@
       
       <section class="seccion-2">
           <div class="inteligencia">
-              <h2>Descubra el nuevo mundo de la inteligencia artificial</h2>
-          </div>
+   <!--           <h2>Descubra el nuevo mundo de la inteligencia artificial</h2> -->
          <div class="photo-grid">
               <div class="seccion-imagen">
-                  <img src="img/animacion.gif" alt="">  
+                  <img src="img/animacion.jpg" alt="">  
               </div>  
           </div>
       </section>
