--- a/index.html
+++ b/index.html
@@ -32,9 +32,6 @@
     </header>
 
     <main id="seccion-principal">  
-      <div class="greeting">
-        <p>MIRA ESTE CAMBIO</p>
-      </div> 
       <section class="seccion-1">
           <div class="acerca-de">
               <div class="card">           
@@ -70,7 +67,7 @@
               <div class="card1">
                 <h2>Proyectos</h2>
                   <div class="item">
-                      <img src="../mi_primera_web/img/proyecto1.png" alt="">
+                      <img src="img/proyecto1.png" alt="">
                   </div>  
                   <h2>Medio ambiente</h2>                      
                   
@@ -82,7 +79,7 @@
           <div class="card-container">
               <div class="card1">
                   <div class="item">
-                      <img src="../mi_primera_web/img/proyecto2.jpg" alt="">
+                      <img src="img/proyecto2.jpg" alt="">
                   </div>
                   <h2>Asesorías y Consultorías</h2>
                   <span class="text"> Aca te puedes dar una idea sobre el alcance de las consultorias y asesorías que presto como ingeniero de sistemas en la parte de admininstración de proyectos de tencología, partiendo desde el levantamiento de información, analisis y estructuración del proyecto, evaluación de alternativas e implementación de la solución, entre otros entregables.
@@ -93,7 +90,7 @@
           <div class="card-container">
               <div class="card1">
                   <div class="item">
-                      <img src="../mi_primera_web/img/proyecto3.jpg" alt="">
+                      <img src="img/proyecto3.jpg" alt="">
                   </div>
                   <h2>Proyectos hechos realidad</h2>
                   <span class="text"> Comparto con ustedes algunos proyectos importantes que he desarrollado y que hoy en día estan funcionando en empresas importantes, contribuyendo a la satisfacción de los clientes, logrando mejor rentabilidad para los accionistas y mejorando la calidad de vida para los colaboradores de las empresas, entre otros benefcios.
